day5-labs/practice/cm-n-secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: config-secrets-pod
spec:
  containers:
  - image: nginx:latest
    name: nginx
  dnsPolicy: ClusterFirst
  restartPolicy: Always
