day5-labs/practice/rbac.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: pod-1
spec:
  serviceAccountName: read-only-sa
  containers:
  - image: nginx:latest
    name: nginx
  dnsPolicy: ClusterFirst
  restartPolicy: Always
