day5-labs/practice/resource-limit.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: resource-limited-pod
spec:
  containers:
  - image: nginx:latest
    name: nginx
    resources:
      requests:
        #Verify with k describe po nginx
        cpu: "128Mi"
      limits:
        cpu: "256Mi"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
